Nun 2 debug widgets für connections: Node connections vs NodeWidget connections